--- a/src/main/resources/templates/ArticleList.html
+++ b/src/main/resources/templates/ArticleList.html
@@ -4,20 +4,10 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <!--<link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css"-->
-          <!--integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">-->
+    <!--integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">-->
     <link type="text/css" rel="stylesheet" th:href="@{/css/bootstrap.css}">
+    <link type="text/css" rel="stylesheet" href="/static/js/bootstrap.min.js">
     <style>
-        .mynav {
-            height: auto;
-        }
-        .half-rule {
-            margin: 30px 40%;
-            color: #e7e7e7;
-        }
-        .context {
-            margin-top: 30px;
-            text-align: center;
-        }
         .myfooter {
             background-color: #5f5f5f;
         }
@@ -33,11 +23,11 @@
 </head>
 <script th:src="@{/js/jquery.min.js}"></script>
 <script  th:src="@{/js/bootstrap.min.js}"></script>
+<script  src="/static/js/bootstrap.min.js"></script>
 <!--<script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>-->
 <!--<script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"-->
-        <!--integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>-->
+<!--integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>-->
 <body>
-
 <div class="nav navbar-default mynav">
     <div class="container-fluid">
         <div class="navbar-header">
@@ -53,7 +43,7 @@
         </div>
         <div id="LinkPart" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-                <li><a href="/articleList">文章</a></li>
+                <li><a href="#">文章</a></li>
                 <li><a href="#">PART 2</a></li>
                 <li><a href="#">PART 3</a></li>
                 <li class="dropdown">
@@ -73,28 +63,36 @@
         </div>
     </div>
 </div>
-<div class="container" style="width: inherit;height: inherit">
-    <div class="" style="background-color:#e0e0e0;height: 300px">
-        <h1></h1>
-    </div>
+<div>
 </div>
-<div class="container">
-    <div class="context">
-        <h1>正文标题</h1>
-        <p>正文内容-正文内容-正文内容-正文内容-正文内容-正文内容-正文内容-正文内容</p>
+<main style="width: 960px;margin: 0 auto">
+    <div class="container" style="width: inherit">
+        <div class="headImg" style="background-color:#e0e0e0;height: 150px">
+        </div>
+        <div>
+            <ol class="breadcrumb">
+                <li><a href="/home">首页</a></li>
+                <li class="active">文章列表</li>
+            </ol>
+        </div>
+        <div class="part1" style="min-height: 700px">
+            <table id="articleList" class="table">
+                <thead>
+                <tr>
+                    <th>日期</th>
+                    <th>标题</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                    <td width="100">2018-5-8</td>
+                    <td><a href="/article">xxxxxxxx</a></td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
     </div>
-    <hr class="half-rule">
-    <div class="container">
-        <div class="col-sm-4" style="background-color: #e2e2e2;height: 200px"></div>
-        <div class="col-sm-4" style="background-color: #f5f5f5;height: 200px"></div>
-        <div class="col-sm-4" style="background-color: #e2e2e2;height: 200px"></div>
-    </div>
-    <hr class="half-rule">
-    <div class="context">
-        <h1>正文标题</h1>
-        <p>正文内容-正文内容-正文内容-正文内容-正文内容-正文内容-正文内容-正文内容</p>
-    </div>
-</div>
+</main>
 <footer class="myfooter" style="height: 150px">
     <div class="container" style="text-align: left">
         <div>
@@ -107,6 +105,8 @@
     </div>
 
 </footer>
-
 </body>
+<script>
+
+</script>
 </html>
