--- a/src/main/resources/templates/control.html
+++ b/src/main/resources/templates/control.html
@@ -54,7 +54,7 @@
                 <li><a href="#">PART 2</a></li>
                 <li><a href="#">PART 3</a></li>
                 <li class="dropdown">
-                    <a href="#"  class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
+                    <a href="#"  class="dropdown-toggle" data-toggle="dropdown" Role="button" aria-haspopup="true"
                        aria-expanded="false">SELECT<span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li><a href="#">PART 1</a></li>
