--- a/src/main/resources/templates/ArticleList.html
+++ b/src/main/resources/templates/ArticleList.html
@@ -86,7 +86,7 @@
                 <tbody>
                 <tr>
                     <td width="100">2018-5-8</td>
-                    <td><a href="/article">xxxxxxxx</a></td>
+                    <td><a href="#" onclick="toArticle()">xxxxxxxx</a></td>
                 </tr>
                 </tbody>
             </table>
@@ -107,6 +107,9 @@
 </footer>
 </body>
 <script>
+    function toArticle() {
+        $.get("/Article")
+    }
 
 </script>
 </html>
