--- a/src/main/resources/templates/ArticleList.html
+++ b/src/main/resources/templates/ArticleList.html
@@ -28,6 +28,7 @@
 <!--<script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"-->
 <!--integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>-->
 <body>
+
 <div class="nav navbar-default mynav">
     <div class="container-fluid">
         <div class="navbar-header">
@@ -43,8 +44,16 @@
         </div>
         <div id="LinkPart" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-                <li><a href="#">文章</a></li>
-                <li><a href="#">PART 2</a></li>
+                <li class="dropdown">
+                    <a href="#"  class="dropdown-toggle" data-toggle="dropdown" Role="button" aria-haspopup="true"
+                       aria-expanded="false">文章<span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="/articleList">文章列表</a></li>
+                        <li role="separator" class="divider"></li>
+                        <li><a href="/newArticle">发文</a></li>
+                        <li><a href="#">我的文章</a></li>
+                    </ul>
+                </li>
                 <li><a href="#">PART 3</a></li>
                 <li class="dropdown">
                     <a href="#"  class="dropdown-toggle" data-toggle="dropdown" Role="button" aria-haspopup="true"
@@ -56,13 +65,14 @@
                     </ul>
                 </li>
             </ul>
-
-            <ul class="nav navbar-nav navbar-right">
+            <input id="nameNav" type="hidden" th:value="${name}" >
+            <ul class="nav navbar-nav navbar-right" id="userNav">
                 <li><a href="#">LOGIN or SIGN UP</a></li>
             </ul>
         </div>
     </div>
 </div>
+
 <div>
 </div>
 <main style="width: 960px;margin: 0 auto">
@@ -110,6 +120,22 @@
     function toArticle() {
         $.get("/Article")
     }
+
+    $(function () {
+        var data = window.sessionStorage.getItem('name');
+        if (data !=""){
+            $('#userNav').html('<li class="dropdown">\n' +
+                ' <a href="#"  class="dropdown-toggle" data-toggle="dropdown" Role="button" aria-haspopup="true"\n' +
+                ' aria-expanded="false" >'+data+'<span class="caret"></span></a>\n' +
+                ' <ul class="dropdown-menu">\n' +
+                ' <li><a href="#">PART 1</a></li>\n' +
+                ' <li><a href="#">PART 2</a></li>\n' +
+                ' <li><a href="#">PART 3</a></li>\n' +
+                ' </ul>\n' +
+                ' </li>' +
+                '<li><a href="#">log out</a></li>')
+        }
+    })
 
 </script>
 </html>
