--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -53,8 +53,16 @@
         </div>
         <div id="LinkPart" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-                <li><a href="/articleList">文章</a></li>
-                <li><a href="/newArticle">发文测试连接</a></li>
+                <li class="dropdown">
+                    <a href="#"  class="dropdown-toggle" data-toggle="dropdown" Role="button" aria-haspopup="true"
+                       aria-expanded="false">文章<span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="/articleList">文章列表</a></li>
+                        <li role="separator" class="divider"></li>
+                        <li><a href="/newArticle">发文</a></li>
+                        <li><a href="#">我的文章</a></li>
+                    </ul>
+                </li>
                 <li><a href="#">PART 3</a></li>
                 <li class="dropdown">
                     <a href="#"  class="dropdown-toggle" data-toggle="dropdown" Role="button" aria-haspopup="true"
@@ -73,6 +81,8 @@
         </div>
     </div>
 </div>
+
+
 <div class="container" style="width: inherit;height: inherit">
     <div class="" style="background-color:#e0e0e0;height: 300px">
         <h1></h1>
@@ -112,7 +122,6 @@
 <script>
     $(function () {
         var data = window.sessionStorage.getItem('name');
-        console.log(data)
         if (data !=""){
             $('#userNav').html('<li class="dropdown">\n' +
                 ' <a href="#"  class="dropdown-toggle" data-toggle="dropdown" Role="button" aria-haspopup="true"\n' +
@@ -122,7 +131,8 @@
                 ' <li><a href="#">PART 2</a></li>\n' +
                 ' <li><a href="#">PART 3</a></li>\n' +
                 ' </ul>\n' +
-                ' </li>')
+                ' </li>' +
+                '<li><a href="#">log out</a></li>')
         }
     })
 
