--- a/src/main/resources/templates/newArticle.html
+++ b/src/main/resources/templates/newArticle.html
@@ -37,8 +37,8 @@
 <script th:src="@{/js/UEditor/ueditor.all.js}"></script>
 <script th:src="@{/js/bootstrap-select.min.js}"></script>
 <script th:src="@{/js/defaults-zh_CN.min.js}"></script>
-<script type="text/javascript" src="/static/js/bootstrap-select.min.js"></script>
-<script type="text/javascript" src="/static/js/defaults-zh_CN.min.js"></script>
+<!--<script type="text/javascript" src="/static/js/bootstrap-select.min.js"></script>-->
+<!--<script type="text/javascript" src="/static/js/defaults-zh_CN.min.js"></script>-->
 <!--<script type="text/javascript" src="/static/js/jquery.min.js"></script>-->
 <!--<script type="text/javascript" src="/static/js/bootstrap.min.js"></script>-->
 
@@ -63,8 +63,16 @@
         </div>
         <div id="LinkPart" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-                <li><a href="/articleList">文章</a></li>
-                <li><a href="#">PART 2</a></li>
+                <li class="dropdown">
+                    <a href="#"  class="dropdown-toggle" data-toggle="dropdown" Role="button" aria-haspopup="true"
+                       aria-expanded="false">文章<span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="/articleList">文章列表</a></li>
+                        <li role="separator" class="divider"></li>
+                        <li><a href="/newArticle">发文</a></li>
+                        <li><a href="#">我的文章</a></li>
+                    </ul>
+                </li>
                 <li><a href="#">PART 3</a></li>
                 <li class="dropdown">
                     <a href="#"  class="dropdown-toggle" data-toggle="dropdown" Role="button" aria-haspopup="true"
@@ -76,8 +84,8 @@
                     </ul>
                 </li>
             </ul>
-
-            <ul class="nav navbar-nav navbar-right">
+            <input id="nameNav" type="hidden" th:value="${name}" >
+            <ul class="nav navbar-nav navbar-right" id="userNav">
                 <li><a href="#">LOGIN or SIGN UP</a></li>
             </ul>
         </div>
@@ -85,13 +93,21 @@
 </div>
 
 <main style="width: 960px;margin: 0 auto">
+    <div>
+        <ol class="breadcrumb">
+            <li><a href="/home">首页</a></li>
+            <li class="active">发布文章</li>
+        </ol>
+    </div>
     <div class="container" style="width: inherit">
         <div class="page-header col-md-12 col-sm-12 col-xs-12">
             <h1>发文 <small>New Article</small></h1>
         </div>
+
         <div class="form-group col-md-12 col-sm-12 col-xs-12">
             <label for="articleTitle">Title</label>
             <input type="text" id="articleTitle" class="form-control" placeholder="title"  >
+            <input type="hidden" id="articleAuthor" >
         </div>
         <div class="row" style="margin: 0 auto">
             <div class="form-group col-md-4 col-sm-12 col-xs-12">
@@ -101,27 +117,27 @@
             <div class="form-group col-md-4 col-sm-12 col-xs-12">
                 <label for="articleLevel">articleLevel</label><br>
                 <select class="selectpicker" id="articleLevel" >
-                    <option>normal</option>
-                    <option>critical</option>
+                    <option title="Normal">1</option>
+                    <option title="Critical">2</option>
                 </select>
             </div>
             <div class="form-group col-md-4 col-sm-12 col-xs-12">
                 <label for="articleType">articleType</label><br>
                 <select class="selectpicker" id="articleType" >
-                    <option>Article</option>
-                    <option>document</option>
+                    <option title="Article">1</option>
+                    <option title="Document">2</option>
                 </select>
             </div>
         </div>
 
-        <div class="form-group col-md-12 col-sm-12 col-xs-12" style=" margin-top: 20px;height: auto">
+        <div class="form-group col-md-12 col-sm-12 col-xs-12" style=" margin-top: 20px;min-height: 500px">
             <label for="ueditor">Context Editor</label>
             <script id="ueditor" type="text/plain" name="content"></script>
         </div>
 
         <div style="text-align: center">
-            <button class="btn btn-primary btnDiv">submit</button>
-            <button class="btn btn-default btnDiv">save as draft</button>
+            <button class="btn btn-primary btnDiv" onclick="submit()">submit</button>
+            <button class="btn btn-default btnDiv" onclick="saveAsDraft()">save as draft</button>
         </div>
     </div>
 </main>
@@ -144,10 +160,62 @@
 <!--<script type="text/javascript" src="/static/js/UEditor/ueditor.config.js"></script>-->
 <!--<script type="text/javascript" src="/static/js/UEditor/ueditor.all.js"></script>-->
 <script type="text/javascript">
+    $(function () {
+        var data = window.sessionStorage.getItem('name');
+        if (data !=""){
+            $('#articleAuthor').val(data);
+            $('#userNav').html('<li class="dropdown">\n' +
+                ' <a href="#"  class="dropdown-toggle" data-toggle="dropdown" Role="button" aria-haspopup="true"\n' +
+                ' aria-expanded="false" >'+data+'<span class="caret"></span></a>\n' +
+                ' <ul class="dropdown-menu">\n' +
+                ' <li><a href="#">PART 1</a></li>\n' +
+                ' <li><a href="#">PART 2</a></li>\n' +
+                ' <li><a href="#">PART 3</a></li>\n' +
+                ' </ul>\n' +
+                ' </li>' +
+                '<li><a href="#">log out</a></li>')
+        }
+    })
+
     var ue = UE.getEditor('ueditor');
 
+    function saveAsDraft() {
+        tools(0);
+    }
     function submit() {
-        var name =
+        tools(1);
+    }
+
+    function tools(flag) {
+        var title = $('#articleTitle').val();
+        var author = $('#articleAuthor').val();
+        var context = UE.getEditor('ueditor').getContent();
+        var code =$('#articleCode').val();
+        var level =$('#articleLevel').val();
+        var type =$('#articleType').val();
+        var flag = flag;
+
+        var data = {
+            "title": title,
+            "author": author,
+            "context": context,
+            "code": code,
+            "level": level,
+            "type": type,
+            "flag": flag
+        }
+
+        $.ajax({
+            url: "/Article/submit.do",
+            type: "POST",
+            dataType: "json",
+            data: data,
+            success: function (data) {
+                if (data.stateCode == 200) {
+                    alert(data.msg);
+                }
+            }
+        })
     }
 </script>
 </html>
